tests/NormalTests/paczka1/small_fuzzy/96825882.err
Error in line 1: Q91n5wgje A171 6,3
Error in line 9: Q91n5wgje S744 53,7
Error in line 16: Q91n5wgje A835 178,07
